feat - working server with shielddb data backed