@@ -8,22 +8,16 @@ If you want to learn more about Quarkus, please visit its website: https://quark
 
 You can run your application in dev mode that enables live coding using:
 ```shell script
-./mvnw compile quarkus:dev
+./mvnw compile quarkus:dev -Dcollektor.base-dir=$PWD/data
 ```
 
 ## Packaging and running the application
 
 The application can be packaged using:
 ```shell script
-./mvnw package
+MAVEN_OPTS="--enable-preview" ./mvnw package
 ```
 It produces the `collektor-1.0.0-SNAPSHOT-runner.jar` file in the `/target` directory.
-Be aware that it’s not an _über-jar_ as the dependencies are copied into the `target/lib` directory.
-
-If you want to build an _über-jar_, execute the following command:
-```shell script
-./mvnw package -Dquarkus.package.type=uber-jar
-```
 
 The application is now runnable using `java -jar target/collektor-1.0.0-SNAPSHOT-runner.jar`.
 
@@ -31,7 +25,7 @@ The application is now runnable using `java -jar target/collektor-1.0.0-SNAPSHOT
 
 You can create a native executable using: 
 ```shell script
-./mvnw package -Pnative
+MAVEN_OPTS="--enable-preview" ./mvnw package -Pnative
 ```
 
 Or, if you don't have GraalVM installed, you can run the native executable build in a container using: 
@@ -42,10 +36,3 @@ Or, if you don't have GraalVM installed, you can run the native executable build
 You can then execute your native executable with: `./target/collektor-1.0.0-SNAPSHOT-runner`
 
 If you want to learn more about building native executables, please consult https://quarkus.io/guides/maven-tooling.html.
-
-# RESTEasy JSON serialisation using Jackson
-
-<p>This example demonstrate RESTEasy JSON serialisation by letting you list, add and remove quark types from a list.</p>
-<p><b>Quarked!</b></p>
-
-Guide: https://quarkus.io/guides/rest-json
